修改xcore依赖包地址